feat: movie detail screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   shared_preferences:
   flutter_svg:
   fan_carousel_image_slider:
+  youtube_player_flutter:
 
 dev_dependencies:
   flutter_test:
